<resources>
    <string name="app_name">Test1</string>
    <string name="login">Login?</string>
    <string name="signup">signup?</string>
    <string name="welcome">WELCOME!!</string>
    <string name="title_activity_act_2">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_act_3">act_3</string>
    <string name="signup_here">Signup here! (:</string>
    <string name="first_name">First Name :</string>
    <string name="last_name">Last Name :</string>
    <string name="mobile_no">Mobile No:</string>
    <string name="e_mail_id">E-mail id :</string>
    <string name="mob_no">Mobile No :</string>
    <string name="password">password :</string>
    <string name="reset">reset</string>
    <string name="submit">submit</string>
    <string name="title_activity_activity_act_3">activity_act_3</string>
    <string name="action_settings">Settings</string>
    <string name="log_id_uname">id or username:</string>
    <string name="p_word">Password :</string>
    <string name="dekh_bhai_test_pic">dekh_bhai_test_pic</string>
    <string name="id_or_user_name">ID or User Name:</string>
    <string name="l_name">Name</string>
    <string name="l_p_word">Password:</string>
    <string name="l_login">login!</string>
    <string name="name">Name</string>
    <string name="la_name" />
    <string name="las_name">Last Name</string>
    <string name="email_id">email Id:</string>
    <string name="phone_no">Phone No:</string>
</resources>
