<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="testapp.evenprime.org.test1.act_3"
    android:background="@drawable/reg_t">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/first_name"
        android:id="@+id/tv1"
        android:layout_marginTop="82dp"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/tv2"
        android:layout_alignEnd="@+id/tv2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/password"
        android:id="@+id/tv5"
        android:layout_marginTop="47dp"
        android:layout_below="@+id/tv4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:id="@+id/b1"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/tv4"
        android:layout_toEndOf="@+id/tv4" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/b2"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/b1"
        android:layout_toEndOf="@+id/b1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/name"
        android:ems="10"
        android:id="@+id/et1"
        android:layout_alignTop="@+id/tv1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/tv1"
        android:layout_toEndOf="@+id/tv1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/las_name"
        android:id="@+id/tv2"
        android:layout_marginTop="42dp"
        android:layout_below="@+id/tv1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/tv4"
        android:layout_alignEnd="@+id/tv4" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et2"
        android:layout_alignTop="@+id/tv2"
        android:layout_alignRight="@+id/et4"
        android:layout_alignEnd="@+id/et4"
        android:layout_alignLeft="@+id/et4"
        android:layout_alignStart="@+id/et4"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/email_id"
        android:id="@+id/tv4"
        android:layout_below="@+id/tv2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="46dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/et4"
        android:layout_alignTop="@+id/tv4"
        android:layout_alignRight="@+id/et5"
        android:layout_alignEnd="@+id/et5"
        android:layout_alignLeft="@+id/et5"
        android:layout_alignStart="@+id/et5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/phone_no"
        android:id="@+id/tv3"
        android:layout_below="@+id/tv5"
        android:layout_toLeftOf="@+id/b1"
        android:layout_toStartOf="@+id/b1"
        android:layout_marginTop="47dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/et3"
        android:layout_alignTop="@+id/tv3"
        android:layout_alignRight="@+id/et5"
        android:layout_alignEnd="@+id/et5"
        android:layout_alignLeft="@+id/et5"
        android:layout_alignStart="@+id/et5" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/et5"
        android:layout_alignTop="@+id/tv5"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/tv5"
        android:layout_toEndOf="@+id/tv5" />

</RelativeLayout>
